Fixing ellipsis display on mobile.

--- a/src/modules/market/components/market-positions-list--position/market-positions-list--position.styles.less
+++ b/src/modules/market/components/market-positions-list--position/market-positions-list--position.styles.less
@@ -135,7 +135,7 @@
     margin-top: 0.75rem;
   }
 
-  > span {
+  > span:last-child {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
